<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemLayout"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="15dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/list_item_background"
    android:layout_marginTop="6dp">

    <!-- 프로필 이미지 -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/profile"
        android:contentDescription="@string/item_profile"
        android:layout_marginEnd="16dp"
        android:paddingTop="2dp"
        android:layout_alignParentStart="true"
        />

    <!-- 텍스트 레이아웃 -->
    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/profileImage">
        <!-- 제목 -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <!-- 날짜 -->
        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_date"
            android:textSize="14sp"
            android:textColor="@color/darkgray" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/checkBoxImageButton"
        android:layout_width="20dp"
        android:layout_height="20dp"

        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/checkbox"
        android:src="@drawable/ic_checkbox"
        android:scaleType="fitCenter"
        app:tint="@color/doosan_blue"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        />
</RelativeLayout>
