<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/delete_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="temp"
        android:textColor="@color/darkgray"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:paddingTop="4sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp">
        <TextView
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_delete"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

</LinearLayout>